--- a/tests/mocks/load-custom-resources/single-page-with-resources/expected-output/index.html
+++ b/tests/mocks/load-custom-resources/single-page-with-resources/expected-output/index.html
@@ -12,16 +12,15 @@
                         height: 100vh;
                     }
                 </style>
-                
+
                 <link rel="stylesheet" type="text/css" href="_assets/style/test.css" id="custom-style">
 <script src="_assets/script/test1.js"></script>
             </head>
             <body class="yc-root yc-root_theme_light">
                 <div id="root"></div>
                 <script type="application/javascript">
-                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-0-0.21860817925674247"},{"name":"Config","href":"project/config.html","id":"Config-1-0.11829524474439834"}],"base":"."},"data":{"title":"Documentation","description":"","meta":{"title":"Documentation","noIndex":true},"links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"title":"Documentation","noIndex":true,"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]}},"router":{"pathname":"index.html"},"lang":"ru"};
+                    window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-0-0.29876695847422696"},{"name":"Config","href":"project/config.html","id":"Config-1-0.8150970627382654"}],"base":"."},"data":{"title":"Documentation","description":"","meta":{"title":"Documentation","noIndex":true,"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"title":"Documentation","noIndex":true,"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]}},"router":{"pathname":"index.html"},"lang":"ru"};
                 </script>
                 <script type="application/javascript" src="_bundle/app.js"></script>
             </body>
         </html>
-    
