feat: Add static markup mode

--- a/tests/mocks/load-custom-resources/md2html-with-resources/expected-output/index.html
+++ b/tests/mocks/load-custom-resources/md2html-with-resources/expected-output/index.html
@@ -1,6 +1,6 @@
 
         <!DOCTYPE html>
-        <html>
+        <html lang="ru">
             <head>
                 <meta charset="utf-8">
                 <meta name="t" content="i">
@@ -12,15 +12,17 @@
                         height: 100vh;
                     }
                 </style>
-
+                
                 <link rel="stylesheet" type="text/css" href="_assets/style/test.css" id="custom-style">
 <script src="_assets/script/test1.js"></script>
             </head>
             <body class="yc-root yc-root_theme_light">
                 <div id="root"></div>
                 <script type="application/javascript">
-                    window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-0-0.9679209960111694"},{"name":"Config","href":"project/config.html","id":"Config-1-0.9725599004660732"}],"base":"."},"data":{"title":"Documentation","description":"","meta":{"title":"Documentation","noIndex":true,"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"title":"Documentation","noIndex":true,"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]}},"router":{"pathname":"index.html"},"lang":"ru"};
+                   window.STATIC_CONTENT = false
+                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-0-0.6374286250267576"},{"name":"Config","href":"project/config.html","id":"Config-1-0.08216851650458601"}],"base":"."},"data":{"title":"Documentation","description":"","meta":{"title":"Documentation","noIndex":true,"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"title":"Documentation","noIndex":true,"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]}},"router":{"pathname":"index.html"},"lang":"ru"};
                 </script>
-                <script type="application/javascript" src="_bundle/app.js"></script>
+                <script type="application/javascript" src="_bundle/app.client.js"></script>
             </body>
         </html>
+    
