--- a/tests/mocks/load-custom-resources/md2html-with-resources/expected-output/page.html
+++ b/tests/mocks/load-custom-resources/md2html-with-resources/expected-output/page.html
@@ -1,6 +1,6 @@
 
         <!DOCTYPE html>
-        <html>
+        <html lang="ru">
             <head>
                 <meta charset="utf-8">
                 <meta name="m" content="e">
@@ -11,15 +11,17 @@
                         height: 100vh;
                     }
                 </style>
-
+                
                 <link rel="stylesheet" type="text/css" href="_assets/style/test.css" id="custom-style">
 <script src="_assets/script/test1.js"></script>
             </head>
             <body class="yc-root yc-root_theme_light">
                 <div id="root"></div>
                 <script type="application/javascript">
-                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-0-0.14913421223898204"},{"name":"Config","href":"project/config.html","id":"Config-1-0.5261293848723128"}],"base":"."},"meta":{"meta":"some meta","style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"assets":[],"headings":[],"title":"","includes":[],"html":"<p>Lorem</p>\n"},"router":{"pathname":"page.html"},"lang":"ru"};
+                   window.STATIC_CONTENT = false
+                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-0-0.6374286250267576"},{"name":"Config","href":"project/config.html","id":"Config-1-0.08216851650458601"}],"base":"."},"meta":{"meta":"some meta","style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"assets":[],"headings":[],"title":"","includes":[],"html":"<p>Lorem</p>\n"},"router":{"pathname":"page.html"},"lang":"ru"};
                 </script>
-                <script type="application/javascript" src="_bundle/app.js"></script>
+                <script type="application/javascript" src="_bundle/app.client.js"></script>
             </body>
         </html>
+    
