fix: Add missed styles in static render mode

--- a/tests/mocks/load-custom-resources/single-page-with-resources/expected-output/single-page.html
+++ b/tests/mocks/load-custom-resources/single-page-with-resources/expected-output/single-page.html
@@ -11,6 +11,7 @@
                         height: 100vh;
                     }
                 </style>
+                <link type="text/css" rel="stylesheet" href="_bundle/app.client.css" />
                 
                 <link rel="stylesheet" type="text/css" href="_assets/style/test.css" id="custom-style">
 <script src="_assets/script/test1.js"></script>
@@ -19,7 +20,7 @@
                 <div id="root"></div>
                 <script type="application/javascript">
                    window.STATIC_CONTENT = false
-                   window.__DATA__ = {"data":{"leading":false,"html":"<p>Lorem</p>\n\n\n<hr class=\"yfm-page__delimeter\">\n\n<p>Lorem</p>\n","headings":[],"meta":{"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"toc":{"title":"Documentation","href":"index.yaml","items":[{"name":"Documentation","href":"#_page","id":"Documentation-0-0.5975180901758983"},{"name":"Config","href":"#_project_config","id":"Config-1-0.1561255669046362"}],"base":".","singlePage":true}},"router":{"pathname":"single-page.html"},"lang":"ru"};
+                   window.__DATA__ = {"data":{"leading":false,"html":"<p>Lorem</p>\n\n\n<hr class=\"yfm-page__delimeter\">\n\n<p>Lorem</p>\n","headings":[],"meta":{"style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"toc":{"title":"Documentation","href":"index.yaml","items":[{"name":"Documentation","href":"#_page","id":"Documentation-0-0.3583923733183447"},{"name":"Config","href":"#_project_config","id":"Config-1-0.052063170308650264"}],"base":".","singlePage":true}},"router":{"pathname":"single-page.html"},"lang":"ru"};
                 </script>
                 <script type="application/javascript" src="_bundle/app.client.js"></script>
             </body>
