--- a/tests/mocks/load-custom-resources/md2html-with-resources/expected-output/page.html
+++ b/tests/mocks/load-custom-resources/md2html-with-resources/expected-output/page.html
@@ -11,6 +11,7 @@
                         height: 100vh;
                     }
                 </style>
+                <link type="text/css" rel="stylesheet" href="_bundle/app.client.css" />
                 
                 <link rel="stylesheet" type="text/css" href="_assets/style/test.css" id="custom-style">
 <script src="_assets/script/test1.js"></script>
@@ -19,7 +20,7 @@
                 <div id="root"></div>
                 <script type="application/javascript">
                    window.STATIC_CONTENT = false
-                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-0-0.6374286250267576"},{"name":"Config","href":"project/config.html","id":"Config-1-0.08216851650458601"}],"base":"."},"meta":{"meta":"some meta","style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"assets":[],"headings":[],"title":"","includes":[],"html":"<p>Lorem</p>\n"},"router":{"pathname":"page.html"},"lang":"ru"};
+                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-0-0.2200041712899643"},{"name":"Config","href":"project/config.html","id":"Config-1-0.9250851177606578"}],"base":"."},"meta":{"meta":"some meta","style":["_assets/style/test.css"],"script":["_assets/script/test1.js"]},"assets":[],"headings":[],"title":"","includes":[],"html":"<p>Lorem</p>\n"},"router":{"pathname":"page.html"},"lang":"ru"};
                 </script>
                 <script type="application/javascript" src="_bundle/app.client.js"></script>
             </body>
