--- a/tests/mocks/load-custom-resources/single-page-with-resources/expected-output/index.html
+++ b/tests/mocks/load-custom-resources/single-page-with-resources/expected-output/index.html
@@ -3,8 +3,8 @@
         <html lang="ru">
             <head>
                 <meta charset="utf-8">
-                <meta name="t" content="i">
-<meta name="n" content="o">
+                <meta name="title" content="Documentation">
+<meta name="noIndex" content="true">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>Documentation | Documentation</title>
                 <style type="text/css">
@@ -26,4 +26,3 @@
                 <script type="application/javascript" src="_bundle/app.client.js"></script>
             </body>
         </html>
-    
