--- a/tests/mocks/load-custom-resources/single-page-with-resources/expected-output/page.html
+++ b/tests/mocks/load-custom-resources/single-page-with-resources/expected-output/page.html
@@ -3,7 +3,7 @@
         <html lang="ru">
             <head>
                 <meta charset="utf-8">
-                <meta name="m" content="e">
+                <meta name="meta" content="some meta">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>Documentation</title>
                 <style type="text/css">
@@ -25,4 +25,3 @@
                 <script type="application/javascript" src="_bundle/app.client.js"></script>
             </body>
         </html>
-    
